--- a/styles.css
+++ b/styles.css
@@ -224,7 +224,7 @@ button:hover {
 
 /* Yes Page background and layout */
 .yes-page {
-    background: url('images/mine2.jpg') no-repeat center center fixed; /* Replace with your own background image */
+    background: url('https://github.com/DilshanaIrfan/valentinegift/blob/main/mine2.jpg?raw=true') no-repeat center center fixed; /* Replace with your own background image */
     background-size: cover;
     height: 100vh;
     display: flex;
