--- a/memory.css
+++ b/memory.css
@@ -1,6 +1,6 @@
 /* Background Image */
 .memory-page {
-    background: url('images/we.jpg') no-repeat center center fixed;
+    background: url('https://github.com/DilshanaIrfan/valentinegift/blob/main/we.jpg?raw=true') no-repeat center center fixed;
     background-size: cover;
     height: 100vh;
     width:100%;
